--- a/src/components/Site.module.css
+++ b/src/components/Site.module.css
@@ -20,6 +20,16 @@
     flex-direction: column;
 }
 
+.nav a {
+    text-decoration: none;
+    color: #282c34;
+}
+
+.nav a.active {
+    color: #7fb8f1;
+    text-decoration: underline;
+}
+
 .content {
     background-color: #282c34;
     min-height: 400px;
